gke/api-gateway/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: asia-southeast1-docker.pkg.dev/crucial-mender-402111/peerprep/gateway:latest
          ports:
            - name: api-gateway
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: "/health-check"
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
      restartPolicy: Always
