gke/api-gateway/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default": "api-gateway-hc"}'
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - name: api-gateway
      port: 8080
      targetPort: 8080
